# simple-chat

./: Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yml
chat-client/: Cargo.toml
chat-client/src/: client.rs  lib.rs  main.rs  websocket.rs
chat-server/: Cargo.toml
chat-server/benches/: throughput_bench.rs
chat-server/src/: lib.rs  main.rs  messages.rs  server.rs  users.rs  websocket.rs
chat-server/tests/: integration_tests.rs  server_tests.rs  stress_tests.rs  tracing_tests.rs
chat-types/: Cargo.toml
chat-types/src/: lib.rs
scripts/: install-hooks.sh  pre-commit  test-integration.sh
src/: main.rs
