[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
chat-types = { path = "../chat-types" }
dashmap = "6.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

[[bench]]
name = "throughput_bench"
harness = false
